<resources>
    <string name="app_name">Spell Out</string>
    <string name="title_activity_registrar">Registrar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_title">Iniciar Sesión</string>
    <string name="email_hint">Correo electronico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button_text">Iniciar Sesión</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="titulo_alumnos">Lista de Alumnos</string>
</resources>